Fix label on budget input [sc-5217]

--- a/apps/dashboard/src/app/account/billing/checkout/checkout.component.html
+++ b/apps/dashboard/src/app/account/billing/checkout/checkout.component.html
@@ -294,6 +294,7 @@
         <div class="budget-input">
           <pa-input
             type="number"
+            externalLabel
             [formControl]="budget"
             [errorMessages]="errors"></pa-input>
           <span
