Manager v2: Improve error management
and reset account store when going back to account list.

--- a/apps/manager-v2/src/app/manage-accounts/account-details/account-details.component.html
+++ b/apps/manager-v2/src/app/manage-accounts/account-details/account-details.component.html
@@ -4,7 +4,8 @@
       <pa-button
         icon="arrow-left"
         aspect="basic"
-        routerLink="..">
+        routerLink=".."
+        (click)="resetAccount()">
         Back
       </pa-button>
       <div class="title-l">
