--- a/apps/dashboard/src/app/account/billing/calculator/calculator.component.scss
+++ b/apps/dashboard/src/app/account/billing/calculator/calculator.component.scss
@@ -34,16 +34,6 @@ pa-radio-group {
   display: flex;
   gap: rhythm(2);
 
-  .self-hosted {
-    display: flex;
-    font-weight: $font-weight-semi-bold;
-    gap: rhythm(1);
-    width: rhythm(28);
-    img {
-      width: rhythm(9);
-    }
-  }
-
   pa-slider {
     flex-grow: 1;
   }
@@ -54,6 +44,11 @@ pa-radio-group {
     font-weight: $font-weight-semi-bold;
     min-width: rhythm(10);
   }
+}
+
+.unit-price {
+  color: $color-neutral-regular;
+  margin-top: - rhythm(0.5);
 }
 
 .total {
