--- a/libs/common/src/lib/user-menu/user-menu.component.html
+++ b/libs/common/src/lib/user-menu/user-menu.component.html
@@ -14,7 +14,7 @@
     *ngIf="(isBillingEnabled | async) && (isAccountManager | async)"
     icon="payment"
     (click)="goToBilling()">
-    {{ 'billing.subscription.title' | translate }}
+    {{ 'account.billing' | translate }}
   </pa-option>
   <pa-separator></pa-separator>
   <pa-option
