--- a/apps/desktop/src/app/main-layout/sidebar.component.html
+++ b/apps/desktop/src/app/main-layout/sidebar.component.html
@@ -18,8 +18,7 @@
             </span>
             <pa-icon
               *ngIf="(currentStep | async) > step"
-              name="circle-check"
-              color="#f06"></pa-icon>
+              name="circle-check"></pa-icon>
             {{ text | translate }}
           </span>
           <div
