--- a/apps/desktop/src/app/main-layout/sidebar.component.scss
+++ b/apps/desktop/src/app/main-layout/sidebar.component.scss
@@ -43,6 +43,9 @@
     &.clickable {
       cursor: pointer;
     }
+    pa-icon {
+      color: $color-primary-regular;
+    }
   }
 
   .step-number {
@@ -65,7 +68,7 @@
     display: flex;
     justify-content: space-between;
     span {
-      max-width: calc(100%  - rhythm(2));
+      max-width: calc(100% - rhythm(2));
       cursor: pointer;
     }
     pa-button {
