--- a/apps/desktop/src/app/connectors/connectors.component.html
+++ b/apps/desktop/src/app/connectors/connectors.component.html
@@ -18,7 +18,7 @@
     <div class="selected-source">
       <img
         [src]="selectedConnector.logo"
-        [alt]="selectedConnector.title + ' logo'" />
+        [alt]="selectedConnector.title" />
       <div>{{ selectedConnector.title }}</div>
     </div>
     <div
