Ericbrehault/sc 4424/upload service in a decoupled process rebased (#718)
* run express server in electron

* run standalone server in dev mode

* dynamic connectors PoC

* use dropbox from server (WIP)

* Nuclia connector

* rename endpoint

* upload to nuclia

* get api key for nuclia connector

* fix upload

* show server status

* get last modified

* choose local or external server

* choose permanent sync or not

* do not read/write connector file permanently

* run http in fork

* use regular fetch for better error management

* get folders

* sync folders

* OneDrive

* use refresh token

* permanent sync with onedrive

* log history

* fix creation

* clean up and hide dynamic connectors

* allow to delete a source

* fix home path with local server

* fix tests

* save on SIGTERM

* restart permanent collection when changing sources

* improve history layout

* bump version for release

* review fixes

--- a/apps/desktop/src/app/connectors/connectors.component.html
+++ b/apps/desktop/src/app/connectors/connectors.component.html
@@ -14,14 +14,25 @@
   [formGroup]="form"
   qa="fields-form"
   (ngSubmit)="validate()">
-  <div
-    *ngIf="type === 'sources'"
-    class="selected-source">
-    <img
-      [src]="selectedConnector.logo"
-      [alt]="selectedConnector.title + ' logo'" />
-    <div>{{ selectedConnector.title }}</div>
-  </div>
+  <ng-container *ngIf="type === 'sources'">
+    <div class="selected-source">
+      <img
+        [src]="selectedConnector.logo"
+        [alt]="selectedConnector.title" />
+      <div>{{ selectedConnector.title }}</div>
+    </div>
+    <div
+      formGroupName="quickAccess"
+      class="settings">
+      <div class="field">
+        <pa-input
+          formControlName="name"
+          [errorMessages]="validationMessages.name">
+          {{ 'upload.source.quick_access_name' | translate }}
+        </pa-input>
+      </div>
+    </div>
+  </ng-container>
   <div
     *ngFor="let field of fields"
     formGroupName="fields"
@@ -82,20 +93,12 @@
   </div>
 
   <div
-    *ngIf="canStoreParams"
-    formGroupName="quickAccess"
-    class="quick-access">
+    class="settings"
+    *ngIf="type === 'sources'">
     <div class="field">
-      <pa-checkbox
-        formControlName="enabled"
-        (valueChange)="updateValidators($event)">
-        {{ 'upload.source.quick_access' | translate }}
+      <pa-checkbox formControlName="permanentSync">
+        {{ 'upload.source.permanent-sync' | translate }}
       </pa-checkbox>
-    </div>
-    <div class="field">
-      <pa-input formControlName="name">
-        {{ 'upload.source.quick_access_name' | translate }}
-      </pa-input>
     </div>
   </div>
 
