--- a/apps/desktop/src/app/history/history.component.html
+++ b/apps/desktop/src/app/history/history.component.html
@@ -3,31 +3,27 @@
   [class.show-active]="showActive | async">
   <header *ngIf="(showActive | async) === false">
     <h2>{{ 'history.title' | translate }}</h2>
-    <pa-button
-      (click)="clear()"
-      kind="destructive"
-      aspect="basic">
-      {{ 'history.clean' | translate }}
-    </pa-button>
   </header>
   <header *ngIf="showActive | async">
     <nsi-back-button link="/history">{{ 'history.back' | translate }}</nsi-back-button>
   </header>
 
-  <pa-table columns="repeat(4, 1fr) 200px 1fr">
+  <pa-table columns="1fr 1fr 304px 1fr 48px">
     <pa-table-header>
       <pa-table-cell header>{{ 'history.date' | translate }}</pa-table-cell>
       <pa-table-cell header>{{ 'history.source' | translate }}</pa-table-cell>
-      <pa-table-cell header>{{ 'upload.steps.destination' | translate }}</pa-table-cell>
       <pa-table-cell header>{{ 'history.knowledge_box' | translate }}</pa-table-cell>
       <pa-table-cell header></pa-table-cell>
       <pa-table-cell header>{{ 'history.data' | translate }}</pa-table-cell>
     </pa-table-header>
     <pa-table-row *ngFor="let upload of uploads | async">
-      <pa-table-cell>{{ upload.date }}</pa-table-cell>
+      <pa-table-cell>
+        <pa-datetime
+          [datetime]="upload.date"
+          format="numerical"></pa-datetime>
+      </pa-table-cell>
       <pa-table-cell>{{ upload.from }}</pa-table-cell>
       <pa-table-cell>{{ upload.to }}</pa-table-cell>
-      <pa-table-cell>{{ upload.kbSlug }}</pa-table-cell>
       <pa-table-cell>
         <stf-progress-bar
           *ngIf="!upload.completed"
