--- a/apps/dashboard/src/app/account/billing/calculator/calculator.component.html
+++ b/apps/dashboard/src/app/account/billing/calculator/calculator.component.html
@@ -24,17 +24,21 @@
             class="body-s"
             [innerHTML]="'billing.ingestion_cost.description' | translate"></div>
         </div>
-        <div
-          class="field-block"
-          *ngFor="let param of params">
-          <pa-slider
-            [min]="prices[tier].usage[param].threshold || 0"
-            [max]="2000 / prices[tier].usage[param].price + prices[tier].usage[param].threshold"
-            [value]="values[param]"
-            (valueChange)="update(param, $event)">
-            <span class="title-xxs">{{ 'billing.parameter.' + param | translate }}</span>
-          </pa-slider>
-          <div class="price">{{ calculatePrice(param) | currency: currency }}</div>
+        <div *ngFor="let param of params">
+          <div class="field-block">
+            <pa-slider
+              [min]="prices[tier].usage[param].threshold || 0"
+              [max]="600 / prices[tier].usage[param].price + prices[tier].usage[param].threshold"
+              [value]="values[param]"
+              (valueChange)="update(param, $event)">
+              <span class="title-xxs">{{ 'billing.parameter.' + param | translate }}</span>
+            </pa-slider>
+            <div class="price">{{ calculatePrice(param) | currency: currency }}</div>
+          </div>
+          <div class="unit-price body-xs">
+            {{ prices[tier].usage[param].price | currency: currency:'symbol':'1.2-6' }} /
+            {{ (['media', 'training-hours'].includes(param) ? 'billing.hour' : 'billing.unit') | translate }}
+          </div>
         </div>
       </div>
       <div class="section">
