--- a/apps/dashboard/src/app/account/billing/checkout/checkout.component.html
+++ b/apps/dashboard/src/app/account/billing/checkout/checkout.component.html
@@ -262,8 +262,8 @@
           <div class="card-error">{{ cardError }}</div>
         </div>
         <pa-button
-          (click)="getToken()"
-          [disabled]="cardName.invalid || !validCard"
+          (click)="createPaymentMethod()"
+          [disabled]="cardName.invalid || !validCard || loading"
           kind="primary">
           {{ 'billing.save_continue' | translate }}
         </pa-button>
@@ -289,8 +289,7 @@
     </div>
     <div class="section-body">
       <div class="budget-form">
-        <div class="body-m">{{ 'billing.budget_description' | translate }}</div>
-        <div class="note">{{ 'billing.budget_note' | translate }}</div>
+        <div [innerHTML]="'billing.budget_description' | translate"></div>
         <div class="budget-input">
           <pa-input
             type="number"
@@ -305,11 +304,11 @@
         </div>
         <pa-button
           (click)="doSubscribe()"
-          [disabled]="editCustomer || editCard || budget.invalid || subscribing"
+          [disabled]="editCustomer || editCard || budget.invalid || loading"
           kind="primary">
           {{ 'billing.review_confirm' | translate }}
         </pa-button>
-        <nsi-spinner *ngIf="subscribing"></nsi-spinner>
+        <nsi-spinner *ngIf="loading"></nsi-spinner>
       </div>
     </div>
   </div>
