Remove beta logo

--- a/libs/common/src/lib/topbar/topbar.component.html
+++ b/libs/common/src/lib/topbar/topbar.component.html
@@ -3,7 +3,7 @@
     class="topbar-logo"
     (click)="goToHome()">
     <svg-icon
-      src="assets/logos/logo-beta.svg"
+      src="assets/logos/logo.svg"
       class="topbar-logo-expanded"></svg-icon>
     <svg-icon
       *ngIf="isStage"
