--- a/libs/common/src/lib/user/consent/consent.component.html
+++ b/libs/common/src/lib/user/consent/consent.component.html
@@ -2,8 +2,8 @@
   <div class="consent-container">
     <img
       class="logo"
-      src="assets/logos/logo-beta.svg"
-      alt="Nuclia Beta" />
+      src="assets/logos/logo.svg"
+      alt="Nuclia" />
 
     <div
       *ngIf="error"
