--- a/libs/common/src/lib/user/user-container/user-container.component.html
+++ b/libs/common/src/lib/user/user-container/user-container.component.html
@@ -1,8 +1,8 @@
 <div class="user-background">
   <div class="logo">
     <img
-      src="assets/logos/logo-beta.svg"
-      alt="Nuclia Beta" />
+      src="assets/logos/logo.svg"
+      alt="Nuclia" />
   </div>
   <div
     class="user-container"
