--- a/libs/common/src/lib/user/user-container/user-container-logo/user-container-logo.component.html
+++ b/libs/common/src/lib/user/user-container/user-container-logo/user-container-logo.component.html
@@ -1,6 +1,6 @@
 <div class="user_container_logo">
   <div class="logo">
-    <img src="assets/logos/logo-beta.svg" />
+    <img src="assets/logos/logo.svg" />
     <!-- <img src="assets/logos/logo_text.svg"/> -->
   </div>
   <ng-content></ng-content>
