--- a/apps/dashboard/src/app/knowledge-box/knowledge-box-training/knowledge-box-training.component.html
+++ b/apps/dashboard/src/app/knowledge-box/knowledge-box-training/knowledge-box-training.component.html
@@ -35,85 +35,82 @@
     <div [class.running]="trainings[type].running">
       <p>{{ 'stash.settings.processes.' + type + '.info' | translate }}</p>
 
-      <div class="select">
-        <ng-container *ngIf="type === trainingTypes.ner || type === trainingTypes.classifier; else singleSelection">
-          <nsi-dropdown-button
-            [disabled]="trainings[type].running"
-            [popupRef]="multiSelectDropdown"
-            [open]="trainings[type].open">
-            {{
-              (type === trainingTypes.ner
-                ? 'stash.settings.processes.training.select-entities'
-                : 'stash.settings.processes.training.select-labelsets'
-              ) | translate
-            }}
-          </nsi-dropdown-button>
-        </ng-container>
+      <ng-container *ngIf="type !== trainingTypes.ner">
+        <div class="select">
+          <ng-container *ngIf="type === trainingTypes.classifier; else singleSelection">
+            <nsi-dropdown-button
+              [disabled]="trainings[type].running"
+              [popupRef]="multiSelectDropdown"
+              [open]="trainings[type].open">
+              {{ 'stash.settings.processes.training.select-labelsets' | translate }}
+            </nsi-dropdown-button>
+          </ng-container>
 
-        <ng-template #singleSelection>
-          <nsi-dropdown-button
-            [disabled]="trainings[type].running"
-            [popupRef]="singleSelectDropdown"
-            [open]="trainings[type].open">
-            {{ 'stash.settings.processes.training.select-labelset' | translate }}
-          </nsi-dropdown-button>
-        </ng-template>
+          <ng-template #singleSelection>
+            <nsi-dropdown-button
+              [disabled]="trainings[type].running"
+              [popupRef]="singleSelectDropdown"
+              [open]="trainings[type].open">
+              {{ 'stash.settings.processes.training.select-labelset' | translate }}
+            </nsi-dropdown-button>
+          </ng-template>
 
-        <div class="selection">{{ getSelection(type) }}</div>
-      </div>
-
-      <pa-dropdown
-        #multiSelectDropdown
-        (onOpen)="trainings[type].open = true"
-        (onClose)="trainings[type].open = false">
-        <pa-option
-          *ngIf="options[type] | async as options"
-          dontCloseOnSelect>
-          <pa-checkbox
-            [value]="trainings[type].selectedOptions.length === options.length"
-            (change)="toggleAll(type)">
-            {{ 'stash.settings.processes.training.select_all' | translate }}
-          </pa-checkbox>
-        </pa-option>
-        <pa-separator></pa-separator>
-        <pa-option
-          *ngFor="let option of options[type] | async"
-          dontCloseOnSelect>
-          <pa-checkbox
-            [value]="trainings[type].selectedOptions.includes(option)"
-            (change)="toggleOption(type, option)">
-            {{ option.title | translate }}
-          </pa-checkbox>
-        </pa-option>
-      </pa-dropdown>
-
-      <pa-dropdown
-        #singleSelectDropdown
-        (onOpen)="trainings[type].open = true"
-        (onClose)="trainings[type].open = false">
-        <pa-option
-          *ngFor="let option of options[type] | async"
-          dontCloseOnSelect>
-          <pa-checkbox
-            [value]="trainings[type].selectedOptions.includes(option)"
-            (change)="updateSelection(type, option)">
-            {{ option.title | translate }}
-          </pa-checkbox>
-        </pa-option>
-      </pa-dropdown>
-
-      <ng-container *ngIf="isBillingEnabled | async">
-        <p [class.warning]="!trainings[type].agreement">
-          {{ 'stash.settings.processes.training.time_requirement' | translate: { hours: hoursRequired } }}
-        </p>
-
-        <div class="agreement-container">
-          <pa-checkbox
-            [disabled]="(cannotTrain | async) || !(hasResources | async) || trainings[type].running"
-            [(value)]="trainings[type].agreement">
-            {{ 'stash.settings.processes.training.agreement' | translate }}
-          </pa-checkbox>
+          <div class="selection">{{ getSelection(type) }}</div>
         </div>
+
+        <pa-dropdown
+          #multiSelectDropdown
+          (onOpen)="trainings[type].open = true"
+          (onClose)="trainings[type].open = false">
+          <pa-option
+            *ngIf="options[type] | async as options"
+            dontCloseOnSelect>
+            <pa-checkbox
+              [value]="trainings[type].selectedOptions.length === options.length"
+              (change)="toggleAll(type)">
+              {{ 'stash.settings.processes.training.select_all' | translate }}
+            </pa-checkbox>
+          </pa-option>
+          <pa-separator></pa-separator>
+          <pa-option
+            *ngFor="let option of options[type] | async"
+            dontCloseOnSelect>
+            <pa-checkbox
+              [value]="trainings[type].selectedOptions.includes(option)"
+              (change)="toggleOption(type, option)">
+              {{ option.title | translate }}
+            </pa-checkbox>
+          </pa-option>
+        </pa-dropdown>
+
+        <pa-dropdown
+          #singleSelectDropdown
+          (onOpen)="trainings[type].open = true"
+          (onClose)="trainings[type].open = false">
+          <pa-option
+            *ngFor="let option of options[type] | async"
+            dontCloseOnSelect>
+            <pa-checkbox
+              [value]="trainings[type].selectedOptions.includes(option)"
+              (change)="updateSelection(type, option)">
+              {{ option.title | translate }}
+            </pa-checkbox>
+          </pa-option>
+        </pa-dropdown>
+
+        <ng-container *ngIf="isBillingEnabled | async">
+          <p [class.warning]="!trainings[type].agreement">
+            {{ 'stash.settings.processes.training.time_requirement' | translate: { hours: hoursRequired } }}
+          </p>
+
+          <div class="agreement-container">
+            <pa-checkbox
+              [disabled]="(cannotTrain | async) || !(hasResources | async) || trainings[type].running"
+              [(value)]="trainings[type].agreement">
+              {{ 'stash.settings.processes.training.agreement' | translate }}
+            </pa-checkbox>
+          </div>
+        </ng-container>
       </ng-container>
     </div>
 
@@ -124,6 +121,7 @@
     </div>
     <div class="cta-container">
       <pa-button
+        *ngIf="type !== trainingTypes.ner"
         kind="primary"
         [disabled]="
           (!trainings[type].running && (isBillingEnabled | async) && !trainings[type].agreement) ||
@@ -133,6 +131,13 @@
         (click)="startOrStopTraining(type)">
         {{ 'stash.settings.processes.training.' + (trainings[type].running ? 'stop' : 'start') | translate }}
       </pa-button>
+
+      <div *ngIf="type === trainingTypes.ner">
+        <strong
+          [innerHtml]="
+            'stash.settings.processes.training.ner.contact' | translate: { email: 'eudald@nuclia.com' }
+          "></strong>
+      </div>
     </div>
   </section>
 </div>
