--- a/libs/search-widget/src/components/knowledge-graph/KnowledgeGraph.scss
+++ b/libs/search-widget/src/components/knowledge-graph/KnowledgeGraph.scss
@@ -1,11 +1,14 @@
 .sw-knowledge-graph {
+  --left-panel-width: var(--rhythm-22);
+  --container-gap: var(--rhythm-2);
+
   display: flex;
   flex: 1 0 auto;
-  gap: var(--rhythm-2);
+  gap: var(--container-gap);
 
   .left-panel {
     flex: 0 0 auto;
-    width: var(--rhythm-22);
+    width: var(--left-panel-width);
 
     .ner-families-container {
       background: var(--color-light-stronger);
@@ -38,5 +41,10 @@
   .knowledge-graph-container {
     background: var(--color-light-stronger);
     flex: 1 1 auto;
+    max-width: 100%;
+    transition: max-width var(--transition-moderate);
+  }
+  &.with-right-panel .knowledge-graph-container {
+    max-width: calc(100vw - var(--side-panel-width) - var(--left-panel-width) - var(--container-gap) * 2);
   }
 }
