--- a/apps/dashboard/src/app/knowledge-box/knowledge-box-home/knowledge-box-home.component.html
+++ b/apps/dashboard/src/app/knowledge-box/knowledge-box-home/knowledge-box-home.component.html
@@ -48,6 +48,9 @@
     <div
       *ngIf="isKbAdmin | async"
       class="right-column">
+      <div class="account-status">
+        <app-account-status></app-account-status>
+      </div>
       <div class="container resource-stats">
         <div *ngIf="locale | async as loc">
           <dl class="total-resources">
