--- a/apps/dashboard/src/app/knowledge-box/knowledge-box-home/knowledge-box-home.component.scss
+++ b/apps/dashboard/src/app/knowledge-box/knowledge-box-home/knowledge-box-home.component.scss
@@ -41,6 +41,10 @@
     margin-bottom: rhythm(4);
   }
 
+  .account-status {
+    margin-bottom: rhythm(4);
+  }
+
   .resource-stats {
     dl {
       align-items: center;
