Add button to top bar

--- a/libs/common/src/lib/topbar/topbar.component.html
+++ b/libs/common/src/lib/topbar/topbar.component.html
@@ -15,6 +15,15 @@
   </button>
 
   <div class="topbar-actions">
+    <pa-button
+      *ngIf="!standalone && (isBillingEnabled | async)"
+      kind="primary"
+      aspect="basic"
+      size="small"
+      [routerLink]="billingUrl | async">
+      {{ 'account.type.' + (accountType | async) | translate }}
+    </pa-button>
+
     <div
       *ngIf="((userInfo | async)?.accounts?.length || 0) > 1"
       class="topbar-account">
