--- a/apps/dashboard/src/app/account/billing/subscriptions/subscriptions.component.scss
+++ b/apps/dashboard/src/app/account/billing/subscriptions/subscriptions.component.scss
@@ -12,6 +12,7 @@ h2 {
 .field-block {
   width: rhythm(24);
   margin-bottom: rhythm(1);
+  margin-top: rhythm(2);
 }
 .subscriptions {
   margin-bottom: rhythm(8);
